# BuildSystemPrototype

./: CMakeLists.txt
test_assignment/: CMakeLists.txt
test_assignment/src/: build_graph.hpp  builder.hpp  main.cpp  target.hpp  thread_pool.hpp  thread_safe_set.hpp
